--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "swiper": "^11.1.7"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
