--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "dompurify": "^3.1.6",
+    "isomorphic-dompurify": "^2.14.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.0",
     "react-image-grid-gallery": "^2.1.4",
+    "sharp": "^0.33.4",
     "swiper": "^11.1.7"
   },
   "devDependencies": {
